frame/support/test/tests/construct_runtime_ui/unsupported_meta_structure.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub struct Runtime
	{
		System: system::{Pallet},
		#[cfg(feature(test))]
		Balance: balances::{Config, Call},
	}
}

fn main() {}
